# beacon-sdk-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
examples/console/: CMakeLists.txt  main.cpp
include/beacon/: EventDefinitionBuilder.hpp  ExceptionSeverity.hpp  Export.hpp  FlushStatus.hpp  ILogger.hpp  Options.hpp  Tracker.hpp  Version.hpp  beacon.hpp
include/beacon/internal/: Types.hpp
src/: Base64.cpp  Base64.hpp  BreadcrumbBuffer.cpp  BreadcrumbBuffer.hpp  DeviceId.cpp  DeviceId.hpp  DiskQueue.cpp  DiskQueue.hpp  EnvironmentCollector.cpp  EnvironmentCollector.hpp  FlushThread.cpp  FlushThread.hpp  HttpClient.cpp  HttpClient.hpp  PropertySanitizer.cpp  PropertySanitizer.hpp  RetryPolicy.cpp  RetryPolicy.hpp  StackTrace.cpp  StackTrace.hpp  Tracker.cpp  UuidV7.cpp  UuidV7.hpp
tests/: CMakeLists.txt  test_breadcrumb_buffer.cpp  test_configure.cpp  test_device_id.cpp  test_disk_queue.cpp  test_environment.cpp  test_event_definition_builder.cpp  test_exceptions.cpp  test_flush.cpp  test_identify_track.cpp  test_lifecycle.cpp  test_manifest.cpp  test_options_validation.cpp  test_property_sanitizer.cpp  test_retry_policy.cpp  test_sessions.cpp  test_thread_safety.cpp  test_uuid.cpp
